Don't double-add item change listeners.

When a Repeater was used as the child of an Item binding to childrenRect,
the item change listener was being added twice for the items created
by the Repeater.

Task-number: QTBUG-12722
(cherry picked from commit 6feb5b75ce96aeeefee189af003949db8c031519)